--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+     <script src="https://analytics.ahrefs.com/analytics.js" data-key="tOYSrMZqkBvbZGDvB2WNgA" async></script>
+    
     <title> Jordan Reid | Portfolio </title>
   </head>
   <body>
